fixing size on mobile

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -132,8 +132,8 @@
    -webkit-overflow-scrolling:touch !important;
    overflow-y: scroll !important;
    @media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
-     margin-left: 15px;
-     margin-top: 5px;
+     margin-left: 3%;
+     margin-top: 2%;
      width: 90%;
      height: 60%;
    }
